--- a/save/webpages/mir-layout/scss/project_styles/_navigation.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_navigation.scss
@@ -36,6 +36,13 @@
   }
   .mir-prop-nav {
     margin-top: -30px;
+    .navbar-nav > li > a {
+      color: $mhhBrown;
+      padding: 3px 0.5rem;
+    }
+    .navbar-nav > li:last-child > a {
+      padding-right: 0;
+    }
   }
 
 // Large devices (desktops) and below: <= 1200px
